refactorng Campaign for LEO Activation by AI Agent