@@ -2,18 +2,9 @@ package leotech.cdp.model.activation;
 
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
-
-import org.quartz.DateBuilder;
-import org.quartz.Job;
-import org.quartz.JobBuilder;
-import org.quartz.JobDataMap;
-import org.quartz.JobDetail;
-import org.quartz.SimpleScheduleBuilder;
-import org.quartz.Trigger;
-import org.quartz.TriggerBuilder;
+import java.util.Objects;
 
 import com.arangodb.ArangoCollection;
 import com.arangodb.ArangoDatabase;
@@ -23,280 +14,226 @@ import com.google.gson.Gson;
 import com.google.gson.annotations.Expose;
 
 import leotech.system.model.SystemUser;
-import leotech.system.util.LogUtil;
 import leotech.system.util.database.ArangoDbUtil;
 import leotech.system.util.database.PersistentObject;
-import rfx.core.util.StringPool;
 import rfx.core.util.StringUtil;
 
 /**
- * 
- *   An activation rule is persistent object with condition and actions that
- *   creates an opening for a marketing or sales opportunity. <br>
- *   Sales and marketing automation workflows use trigger events to enable small
- *   organizations to scale customer interactions.
- *   
- *    @author Trieu Nguyen (Thomas)
- *    @since 2021
+ * ActivationRule
  *
+ * Pure domain model. No scheduler, no Quartz, no side effects.
  */
 public class ActivationRule extends PersistentObject implements Comparable<ActivationRule>, Serializable {
-	
-	private static final int DEFAULT_TIME_INTERVAL = 300; // 300 seconds is 5 minutes
+
+
 
 	private static final long serialVersionUID = 1825726230556120351L;
 
-	// 15 minutes
-	public static final long TIMEOUT_ACTIVATION = 60000 * 15;
-	
-	// 20 minutes
-	public static final long TIME_FOR_NEXT_LOOP = 60000 * 20;
-
 	public static final String SCHEDULING_TASK = "scheduling_task";
 	public static final String EVENT_TRIGGER_TASK = "event_trigger_task";
-	
+
 	public static final String COLLECTION_NAME = getCdpCollectionName(ActivationRule.class);
+
+	private static final Gson GSON = new Gson();
 	static ArangoCollection dbCollection;
 
+	// =========================
+	// Persistent Fields
+	// =========================
 	@Key
 	@Expose
-	String id;
+	private String id;
+	@Expose
+	private Date createdAt;
+	@Expose
+	private Date updatedAt;
 
 	@Expose
-	Date createdAt;
+	private String name;
+	@Expose
+	private String activationType;
+	@Expose
+	private String description = "";
 
 	@Expose
-	Date updatedAt;
+	private int priority = 1;
+	@Expose
+	private boolean active = true;
 
 	@Expose
-	String name;
-	
+	private String condition = "true";
 	@Expose
-	String activationType;
+	private List<String> actions = new ArrayList<>();
 
 	@Expose
-	String description = "";
+	private String purpose = "";
 
 	@Expose
-	int priority = 1;
-	
+	private String agentId = "";
 	@Expose
-	boolean active = true;
-
-	@Expose
-	String condition = "true";
-	
-	@Expose
-	List<String> actions = new ArrayList<String>();
-
-	@Expose
-	String purpose = "";
+	private String segmentId = "";
 
 	@Expose
 	int assetType = -1;
-	
+
 	@Expose
 	String assetTemplateId = "";
-	
+
 	@Expose
 	String assetTemplateName = "";
-	
+
 	@Expose
-	String dataServiceId = "";
-	
-	@Expose
-	String dataServiceName = "";
-	
-	@Expose
-	String segmentId = "";
-	
-	@Expose
-	String campaignId = "";
-	
-	@Expose
-	int schedulingTime = 0; // run every 5 minutes
-	
-	@Expose
-	String timeToStart = "";  // in HH:mm , e.g: 02:16
-	
-	@Expose
-	String triggerEventName = "";
-	
-	@Expose
-	boolean directActivation = false;
-	
+	String agentName = "";
+
 	/**
-	 * who created this rule 
+	 * schedulingTime: < 0 : manual / one-time = 0 : polling loop > 0 : fixed-rate
+	 * schedule
 	 */
 	@Expose
-	String ownerUsername = SystemUser.SUPER_ADMIN_LOGIN;	
-	
-	
+	private int schedulingTime = 0;
+
+	/**
+	 * timeUnit: 0 = seconds 1 = minutes 2 = hours (DEFAULT) 4 = days 5 = weeks
+	 */
+	@Expose
+	private int timeUnit = TimeUnitCode.HOUR;
+
+	@Expose
+	private String timeToStart = "00:00";
+	@Expose
+	private String triggerEventName = "";
+
+	@Expose
+	private String ownerUsername = SystemUser.SUPER_ADMIN_LOGIN;
+
+	// =========================
+	// Persistence
+	// =========================
 	@Override
 	public ArangoCollection getDbCollection() {
 		if (dbCollection == null) {
-			ArangoDatabase arangoDatabase = ArangoDbUtil.getCdpDatabase();
-			dbCollection = arangoDatabase.collection(COLLECTION_NAME);
-			// ensure indexing key fields
-			dbCollection.ensurePersistentIndex(Arrays.asList("dataServiceId"), new PersistentIndexOptions().unique(false));
-			dbCollection.ensurePersistentIndex(Arrays.asList("assetTemplateId"), new PersistentIndexOptions().unique(false));
-			dbCollection.ensurePersistentIndex(Arrays.asList("segmentId"), new PersistentIndexOptions().unique(false));
-			dbCollection.ensurePersistentIndex(Arrays.asList("campaignId"), new PersistentIndexOptions().unique(false));
+			synchronized (ActivationRule.class) {
+				if (dbCollection == null) {
+					ArangoDatabase db = ArangoDbUtil.getCdpDatabase();
+					dbCollection = db.collection(COLLECTION_NAME);
+
+					dbCollection.ensurePersistentIndex(List.of("agentId"), new PersistentIndexOptions().unique(false));
+
+					dbCollection.ensurePersistentIndex(List.of("segmentId"),
+							new PersistentIndexOptions().unique(false));
+				}
+			}
 		}
 		return dbCollection;
 	}
 
 	@Override
 	public boolean dataValidation() {
-		return StringUtil.isNotEmpty(this.name) && StringUtil.isNotEmpty(this.activationType) && StringUtil.isNotEmpty(this.ownerUsername);
+		return StringUtil.isNotEmpty(name) && StringUtil.isNotEmpty(activationType)
+				&& StringUtil.isNotEmpty(ownerUsername);
 	}
 
 	@Override
-	public String buildHashedId() throws IllegalArgumentException {
-		if(dataValidation()) {
-			String keyHint = ownerUsername + name + activationType + segmentId + campaignId + dataServiceId + timeToStart + purpose + schedulingTime + condition + triggerEventName;
-			this.id = createHashedId(keyHint);
-			return this.id;
-		} else {
-			newIllegalArgumentException("purpose, segmentId and dataServiceId are required to create ActivationRule !");
+	public String buildHashedId() {
+		if (!dataValidation()) {
+			throw new IllegalArgumentException("Invalid ActivationRule");
 		}
-		return null;
+
+		this.id = createHashedId(ownerUsername + name + activationType + segmentId + agentId + timeToStart
+				+ schedulingTime + timeUnit + condition + triggerEventName);
+		return id;
 	}
 
-	public ActivationRule() {
-		// for JSON
-	}
-	
-	/**
-	 * to create a new ActivationRule
-	 * 
-	 * @param purpose
-	 * @param activationType
-	 * @param name
-	 * @param description
-	 * @param priority
-	 * @param dataServiceId
-	 * @param segmentId
-	 * @param delayMinutes
-	 * @param schedulingTime
-	 * @param triggerEventName
-	 * @return
-	 */
-	public static ActivationRule create(String ownerUsername, String purpose, String activationType, String name, String description, int priority, String dataServiceId, String segmentId, String timeToStart, int schedulingTime,  String triggerEventName) {
-		return new ActivationRule(ownerUsername, purpose, activationType, name, description, priority, dataServiceId, segmentId, timeToStart, schedulingTime, triggerEventName);
-	}
-	
-	public static ActivationRule create(String ownerUsername, String purpose, String activationType, String name, String condition) {
-		return new ActivationRule(ownerUsername, purpose, activationType, name, condition);
+	// =========================
+	// Scheduling metadata (read-only)
+	// =========================
+	public int getSchedulingTime() {
+		return schedulingTime;
 	}
 
-	protected ActivationRule(String ownerUsername, String purpose, String activationType, String name, String description, int priority, String dataServiceId, String segmentId, String timeToStart, int schedulingTime, String triggerEventName) {
-		super();
-		this.ownerUsername = ownerUsername;
-		this.purpose = purpose;
-		this.condition = SCHEDULING_TASK;
-		
-		this.activationType = activationType;
-		this.name = name;
-		this.description = description;
-		this.priority = priority;
-		this.dataServiceId = dataServiceId;
-		this.segmentId = segmentId;
-		
-		// if schedulingTime > 0, means is scheduleAtFixedRate, make sure the delay value is positive number
-		this.timeToStart = timeToStart;
-		this.schedulingTime = schedulingTime;
-		this.triggerEventName = triggerEventName;
-		
-		this.createdAt = new Date();
-		this.updatedAt = this.createdAt;
-		
-		// build ID
-		buildHashedId();
-	}
-	
-	protected ActivationRule(String ownerUsername, String purpose, String activationType, String name, String condition) {
-		super();
-		this.ownerUsername = ownerUsername;
-		this.purpose = purpose;
-		this.condition = condition;
-		
-		this.activationType = activationType;
-		this.name = name;
-		this.description = "";
-		this.priority = 0;
-		
-		// if schedulingTime > 0, means is scheduleAtFixedRate, make sure the delay value is positive number
-		this.timeToStart = "00:00";
-		this.schedulingTime = 0;
-		this.triggerEventName = "";
-		
-		this.createdAt = new Date();
-		this.updatedAt = this.createdAt;
-		
-		// build ID
-		buildHashedId();
-	}
-
-	public boolean isActive() {
-		return active;
-	}
-
-	public void setActive(boolean active) {
-		this.active = active;
+	public int getTimeUnit() {
+		return timeUnit;
 	}
 
 	public String getTimeToStart() {
 		return timeToStart;
 	}
-	
-	public Date getTodayAt() {		
-		String[] toks = timeToStart.split(StringPool.COLON);		
-		int hourOfDay = 0;
-		int minute = 0;
-		int second = 0;
-		if(toks.length == 2) {
-			hourOfDay = StringUtil.safeParseInt(toks[0]);
-			minute = StringUtil.safeParseInt(toks[1]);
-			return DateBuilder.todayAt(hourOfDay, minute, second);
-		}
-		return new Date();
+
+	public boolean isManualTrigger() {
+		return schedulingTime < 0;
 	}
 
-	public void setTimeToStart(String timeToStart) {
-		this.timeToStart = timeToStart;
+	public boolean isPollingLoop() {
+		return schedulingTime == 0;
 	}
 
-	public String getTriggerEventName() {
-		return triggerEventName;
+	public boolean isFixedRate() {
+		return schedulingTime > 0;
 	}
 
-	public void setTriggerEventName(String triggerEventName) {
-		this.triggerEventName = triggerEventName;
+	// =========================
+	// Equality
+	// =========================
+	@Override
+	public boolean equals(Object o) {
+		return (o instanceof ActivationRule) && Objects.equals(id, ((ActivationRule) o).id);
 	}
 
-	public String getPurpose() {
-		return purpose;
+	@Override
+	public int hashCode() {
+		return Objects.hashCode(id);
 	}
 
-	public void setPurpose(String purpose) {
-		this.purpose = purpose;
+	@Override
+	public int compareTo(ActivationRule o) {
+		return Integer.compare(o.priority, this.priority);
 	}
 
-	public void setAssetTemplateId(String assetTemplateId) {
-		this.assetTemplateId = assetTemplateId;
+	@Override
+	public String toString() {
+		return GSON.toJson(this);
 	}
 
-	public void setSchedulingTime(int schedulingTime) {
-		this.schedulingTime = schedulingTime;
+	@Override
+	public String getDocumentUUID() {
+		return COLLECTION_NAME + "/" + id;
 	}
 
-	public String getActivationType() {
-		return activationType;
+	@Override
+	public long getMinutesSinceLastUpdate() {
+		return getDifferenceInMinutes(this.updatedAt);
 	}
 
-	public void setActivationType(String activationType) {
-		this.activationType = activationType;
+	// =========================
+	// Getter and Setter
+	// =========================
+
+	public String getId() {
+		return id;
+	}
+
+	public void setId(String id) {
+		this.id = id;
+	}
+
+	@Override
+	public Date getCreatedAt() {
+		return createdAt;
+	}
+
+	@Override
+	public void setCreatedAt(Date createdAt) {
+		this.createdAt = createdAt;
+	}
+
+	@Override
+	public Date getUpdatedAt() {
+		return updatedAt;
+	}
+
+	@Override
+	public void setUpdatedAt(Date updatedAt) {
+		this.updatedAt = updatedAt;
 	}
 
 	public String getName() {
@@ -305,6 +242,14 @@ public class ActivationRule extends PersistentObject implements Comparable<Activ
 
 	public void setName(String name) {
 		this.name = name;
+	}
+
+	public String getActivationType() {
+		return activationType;
+	}
+
+	public void setActivationType(String activationType) {
+		this.activationType = activationType;
 	}
 
 	public String getDescription() {
@@ -323,6 +268,14 @@ public class ActivationRule extends PersistentObject implements Comparable<Activ
 		this.priority = priority;
 	}
 
+	public boolean isActive() {
+		return active;
+	}
+
+	public void setActive(boolean active) {
+		this.active = active;
+	}
+
 	public String getCondition() {
 		return condition;
 	}
@@ -330,48 +283,69 @@ public class ActivationRule extends PersistentObject implements Comparable<Activ
 	public void setCondition(String condition) {
 		this.condition = condition;
 	}
-	
+
+	public List<String> getActions() {
+		return actions;
+	}
+
+	public void setActions(List<String> actions) {
+		this.actions = actions;
+	}
+
+	public String getPurpose() {
+		return purpose;
+	}
+
+	public void setPurpose(String purpose) {
+		this.purpose = purpose;
+	}
+
+	public String getAgentId() {
+		return agentId;
+	}
+
+	public void setAgentId(String agentId) {
+		this.agentId = agentId;
+	}
+
+	public String getSegmentId() {
+		return segmentId;
+	}
+
+	public void setSegmentId(String segmentId) {
+		this.segmentId = segmentId;
+	}
+
+	public String getTriggerEventName() {
+		return triggerEventName;
+	}
+
+	public void setTriggerEventName(String triggerEventName) {
+		this.triggerEventName = triggerEventName;
+	}
+
 	public String getOwnerUsername() {
-		if(this.ownerUsername == null) {
-			return "";
-		}
 		return ownerUsername;
 	}
 
 	public void setOwnerUsername(String ownerUsername) {
-		if(StringUtil.isEmpty(this.ownerUsername)) {
-			this.ownerUsername = ownerUsername;
-		}
+		this.ownerUsername = ownerUsername;
 	}
 
-	@Override
-	public int hashCode() {
-		return this.name.hashCode();
+	public static String getSchedulingTask() {
+		return SCHEDULING_TASK;
 	}
 
-	@Override
-	public Date getCreatedAt() {
-		return this.createdAt;
+	public void setSchedulingTime(int schedulingTime) {
+		this.schedulingTime = schedulingTime;
 	}
 
-	@Override
-	public void setCreatedAt(Date createdAt) {
-		this.createdAt = createdAt;
+	public void setTimeUnit(int timeUnit) {
+		this.timeUnit = timeUnit;
 	}
 
-	@Override
-	public Date getUpdatedAt() {
-		return this.updatedAt;
-	}
-	
-	@Override
-	public long getMinutesSinceLastUpdate() {
-		return getDifferenceInMinutes(this.updatedAt);
-	}
-
-	@Override
-	public void setUpdatedAt(Date updatedAt) {
-		this.updatedAt = updatedAt;
+	public void setTimeToStart(String timeToStart) {
+		this.timeToStart = timeToStart;
 	}
 
 	public int getAssetType() {
@@ -382,44 +356,12 @@ public class ActivationRule extends PersistentObject implements Comparable<Activ
 		this.assetType = assetType;
 	}
 
-	public String getId() {
-		return id;
-	}
-
-	public void setId(String id) {
-		this.id = id;
-	}
-
-	public boolean isDirectActivation() {
-		return directActivation;
-	}
-
-	public void setDirectActivation(boolean directActivation) {
-		this.directActivation = directActivation;
-	}
-
-	public static String getCollectionName() {
-		return COLLECTION_NAME;
-	}
-
 	public String getAssetTemplateId() {
 		return assetTemplateId;
 	}
-	
-	public String getDataServiceId() {
-		return dataServiceId;
-	}
 
-	public void setDataServiceId(String dataServiceId) {
-		this.dataServiceId = dataServiceId;
-	}
-
-	public String getDataServiceName() {
-		return dataServiceName;
-	}
-
-	public void setDataServiceName(String dataServiceName) {
-		this.dataServiceName = dataServiceName;
+	public void setAssetTemplateId(String assetTemplateId) {
+		this.assetTemplateId = assetTemplateId;
 	}
 
 	public String getAssetTemplateName() {
@@ -429,111 +371,41 @@ public class ActivationRule extends PersistentObject implements Comparable<Activ
 	public void setAssetTemplateName(String assetTemplateName) {
 		this.assetTemplateName = assetTemplateName;
 	}
-	
-	public String getSegmentId() {
-		return segmentId;
+
+	public String getAgentName() {
+		return agentName;
 	}
 
-	public void setSegmentId(String segmentId) {
-		this.segmentId = segmentId;
+	public void setAgentName(String agentName) {
+		this.agentName = agentName;
 	}
 
-	public int getSchedulingTime() {
-		return schedulingTime;
-	}
-	
-	
-	
-	public List<String> getActions() {
-		return actions;
-	}
+	public static ActivationRule create(String ownerUsername, String purpose, String activationType, String name,
+			String description, int priority, String agentId, String segmentId, String timeToStart, int schedulingTime,
+			int timeUnit, String triggerEventName) {
+		ActivationRule rule = new ActivationRule();
 
-	public void setActions(List<String> actions) {
-		this.actions = actions;
-	}
-	
-	public void setAction(String action) {
-		this.actions.add(action);
-	}
+		rule.setOwnerUsername(ownerUsername);
+		rule.setPurpose(purpose);
+		rule.setActivationType(activationType);
+		rule.setName(name);
+		rule.setDescription(description);
+		rule.setPriority(priority);
+		rule.setAgentId(agentId);
+		rule.setSegmentId(segmentId);
 
-	@Override
-	public String toString() {
-		return new Gson().toJson(this);
-	}
+		rule.setTimeToStart(timeToStart);
+		rule.setSchedulingTime(schedulingTime);
+		rule.setTimeUnit(timeUnit);
 
-	@Override
-	public String getDocumentUUID() {
-		return COLLECTION_NAME + "/" + id;
-	}
-	
-	@Override
-	public boolean equals(Object obj) {
-		ActivationRule rule = (ActivationRule) obj;
-		return this.id.equals(rule.getId());
-	}
+		rule.setTriggerEventName(triggerEventName);
 
-	@Override
-	public int compareTo(ActivationRule o) {
-		if(this.priority > o.priority) {
-			return -1;
-		}
-		else if(this.priority < o.priority) {
-			return 1;
-		}
-		return 0;
-	}
+		Date now = new Date();
+		rule.setCreatedAt(now);
+		rule.setUpdatedAt(now);
 
-	/**
-	 * start activation rule instance and schedule it as TimerTask
-	 * 
-	 * @param service
-	 * @param timer
-	 */
-	public final JobDetail getJobDetail(String activationJobId, Agent dataService) {
-		JobDataMap jobDataMap = new JobDataMap();
-		jobDataMap.put("activationRule", this);
-		jobDataMap.put("dataService", dataService);
-		jobDataMap.put("activationJobId", activationJobId);
-		Class<? extends Job> classForJobDetails = dataService.getClassForJobDetails();
-		JobDetail jobDetail = JobBuilder.newJob(classForJobDetails).usingJobData(jobDataMap)
-				.withIdentity("activationJobId", activationJobId)
-				.build();
-		return jobDetail;
-	}
-	
-	/**
-	 * @param timer
-	 */
-	public final Trigger getJobTrigger() {
-		LogUtil.logInfo(this.getClass(), "setSchedulerForActivationRule schedulingTime: " + schedulingTime);
-		if (schedulingTime >= 0) {
-			Date timeToStart = getTodayAt();
-			
-			SimpleScheduleBuilder scheduleBuilder = SimpleScheduleBuilder.simpleSchedule();
-			if(schedulingTime == 0) {
-				scheduleBuilder.withIntervalInSeconds(DEFAULT_TIME_INTERVAL).repeatForever();
-			}
-			else {
-				scheduleBuilder.withIntervalInHours(schedulingTime).repeatForever();
-			}
-			
-			Trigger trigger = TriggerBuilder.newTrigger()
-					.withIdentity("ActivationRule", this.getId())
-					.startAt(timeToStart) 
-					.withSchedule(scheduleBuilder)
-					.build();
-			return trigger;
-		}
-		else {
-			System.out.println("===> do manually for one time");
-			LogUtil.logInfo(this.getClass(), "setSchedulerForActivationRule do manually for one time: ");
-			// do manually for one time
-			Trigger trigger = TriggerBuilder.newTrigger()
-					.withIdentity("ActivationRule", this.getId())
-					.startAt(new Date()) 
-					.build();
-			return trigger;
-		}
+		rule.buildHashedId();
+		return rule;
 	}
 
 }
